2004-09-05  Francois Dumont  <dums@...>

	* stlport/stl/_string_hash.h: Performance improvement, multiplication
	replaced by shift operations thanks Greg S
	
2004-09-03  Francois Dumont  <dums@...>

	* test/unit/fstream_test.cpp, sstream_test.cpp: Move of the test for the
	infinite loop from FstreamTest test case to SstreamTest, addition of some
	checks.
	
	* test/unit/full_streambuf.h: streambuf implementation simulating full
	output.
	
	* stlport/exception: restauration of some modification removed after the
	rollback of the 2004-09-01.
	
	* stlport/config/stl_gcc.h: homogeneification of the coding standard used
	within STLport, 2 spaces indentations even for preprocessor directives.
	Doing so, discovered a weird configuration for Mac OS platform (__APPLE__)
	concerning the _STLP_NATIVE_INCLUDE_PATH macro definition, fixed.
	
	* stlport/stl/config/stl_*.mak: removal of all references to the 
	_STLP_REDEFINED_STD	macro as it is now the default and only way STLport 
	use to replace native	Standard library.
	
	* test/unit/nmake-vc-common.mak: add inclusion of the vc_warning_disable.h
	file to avoid warnings during build process thanks Michael Fink.

2004-09-03  Petr Ovtchenkov  <ptr@Island...>

	* stlport/stl/_ostream.c: removed infinite loop in case when outgoing stream
	can't accept more chars. Thanks Daniel White, Ulrich Eckhardt, Francois Dumont.

	* test/unit/fstream_test.cpp: test for problem above. Thanks Ulrich Eckhardt.

2004-09-02  Francois Dumont  <dums@...>

	* stlport/exception, stlport/stl/_site_config.h, test/unit/exception_test.cpp:
	Creation of the _STLP_NO_UNEXPECTED_EXCEPT_SUPPORT macro to signal support of
	the unexpected exception mecanism. Related type/function are only brought to the
	STLport namespace if correctly supported, exception_test.cpp check that.
	
	* New modification of the _Rb_tree and _Hashtable associated iterator structs.
	Removal of the container_type pass through the iterator traits; iterator traits